@@ -119,7 +119,7 @@ void HeroSprites::rebuild_equipment() {
 
   // The hero's shadow.
   if (shadow_sprite == nullptr) {
-    shadow_sprite = hero.create_sprite("entities/shadow");
+    shadow_sprite = hero.create_sprite("entities/shadow", "shadow");
     shadow_sprite->set_current_animation("big");
   }
 
@@ -137,7 +137,7 @@ void HeroSprites::rebuild_equipment() {
     // TODO make this sprite depend on the sword sprite: sword_sprite_id + "_stars"
     std::ostringstream oss;
     oss << "hero/sword_stars" << sword_number;
-    sword_stars_sprite = hero.create_sprite(oss.str());
+    sword_stars_sprite = hero.create_sprite(oss.str(), "sword_stars");
     sword_stars_sprite->stop_animation();
   }
 
@@ -147,7 +147,7 @@ void HeroSprites::rebuild_equipment() {
   }
 
   // The trail.
-  trail_sprite = hero.create_sprite("hero/trail");
+  trail_sprite = hero.create_sprite("hero/trail", "trail");
   trail_sprite->stop_animation();
 
   // Restore the animation direction.
@@ -187,7 +187,7 @@ void HeroSprites::set_tunic_sprite_id(const std::string& sprite_id) {
     tunic_sprite = nullptr;
   }
 
-  tunic_sprite = hero.create_sprite(sprite_id);
+  tunic_sprite = hero.create_sprite(sprite_id, "tunic");
   tunic_sprite->enable_pixel_collisions();
   if (!animation.empty()) {
     set_tunic_animation(animation);
@@ -258,7 +258,7 @@ void HeroSprites::set_sword_sprite_id(const std::string& sprite_id) {
 
   if (!sprite_id.empty()) {
     // There is a sword sprite specified.
-    sword_sprite = hero.create_sprite(sprite_id);
+    sword_sprite = hero.create_sprite(sprite_id, "sword");
     sword_sprite->enable_pixel_collisions();
     sword_sprite->set_synchronized_to(tunic_sprite);
     if (animation.empty()) {
@@ -376,7 +376,7 @@ void HeroSprites::set_shield_sprite_id(const std::string& sprite_id) {
 
   if (!sprite_id.empty()) {
     // There is a shield sprite specified.
-    shield_sprite = hero.create_sprite(sprite_id);
+    shield_sprite = hero.create_sprite(sprite_id, "shield");
     shield_sprite->set_synchronized_to(tunic_sprite);
     if (animation.empty()) {
       shield_sprite->stop_animation();
@@ -1568,7 +1568,7 @@ void HeroSprites::create_ground(Ground ground) {
   }
 
   if (!sprite_id.empty()) {
-    ground_sprite = hero.create_sprite(sprite_id);
+    ground_sprite = hero.create_sprite(sprite_id, "ground");
     ground_sprite->set_tileset(hero.get_map().get_tileset());
     if (ground != Ground::SHALLOW_WATER) {
       ground_sprite->set_current_animation(walking ? "walking" : "stopped");
